@@ -1,3 +1,8 @@
+Tue May 27 21:35:10 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3052
+
 Sun May 25 15:49:25 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
